--- a/deel-3-webpagina/index.html
+++ b/deel-3-webpagina/index.html
@@ -7,10 +7,33 @@
     <title>Flexbox opdracht 3</title>
 </head>
 <body>
-    <div>
+<nav>
+    <div class="nav-1"><p><strong>Analytica</strong></p></div>
+    <div class="nav-2"><p>About us</p>
+    <p>Strategy</p>
+    <p>Prices</p>
+    <p>Contact</p></div>
+</nav>
+<div class="container-1">
+    <div class="header">
         <h1>All Your Business Data in One Place</h1>
         <h3>Sync and store all your business data. Explore your data with SQL or visualize it with your favorite BI or
             analytics tools.</h3>
     </div>
+    <section>
+        <article class="blok-1">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium alias corporis dignissimos, dolores
+                ducimus, esse est neque officia omnis placeat possimus quas quo quod quos rem sunt tempore? Ea, non.</p>
+        </article>
+        <article class="blok-2">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium alias corporis dignissimos, dolores
+                ducimus, esse est neque officia omnis placeat possimus quas quo quod quos rem sunt tempore? Ea, non.</p>
+        </article>
+        <article class="blok-3">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium alias corporis dignissimos, dolores
+                ducimus, esse est neque officia omnis placeat possimus quas quo quod quos rem sunt tempore? Ea, non.</p>
+        </article>
+    </section>
+</div>
 </body>
 </html>
